tests/baselines/reference/restInvalidArgumentType.errors.txt
tests/cases/compiler/restInvalidArgumentType.ts(18,13): error TS2700: Rest types may only be created from object types.
tests/cases/compiler/restInvalidArgumentType.ts(20,13): error TS2700: Rest types may only be created from object types.
tests/cases/compiler/restInvalidArgumentType.ts(22,13): error TS2700: Rest types may only be created from object types.
tests/cases/compiler/restInvalidArgumentType.ts(23,13): error TS2700: Rest types may only be created from object types.
tests/cases/compiler/restInvalidArgumentType.ts(25,13): error TS2700: Rest types may only be created from object types.
tests/cases/compiler/restInvalidArgumentType.ts(28,13): error TS2700: Rest types may only be created from object types.
tests/cases/compiler/restInvalidArgumentType.ts(30,13): error TS2700: Rest types may only be created from object types.


==== tests/cases/compiler/restInvalidArgumentType.ts (7 errors) ====
    function f<T extends { b: string }>(p1: T, p2: T[]) {
        var t: T;
    
        var i: T["b"];
        var k: keyof T;
    
        var mapped_generic: {[P in keyof T]: T[P]};
        var mapped: {[P in "b"]: T[P]};
    
        var union_generic: T | { a: number };
        var intersection_generic: T & { a: number };
    
        var u: undefined;
        var n: null;
    
        var a: any;
    
        var {...r1} = p1;   // Error, generic type paramterre
                ~~
!!! error TS2700: Rest types may only be created from object types.
        var {...r2} = p2;   // OK
        var {...r3} = t;   // Error, generic type paramter
                ~~
!!! error TS2700: Rest types may only be created from object types.
    
        var {...r4} = i;   // Error, index access
                ~~
!!! error TS2700: Rest types may only be created from object types.
        var {...r5} = k;   // Error, index
                ~~
!!! error TS2700: Rest types may only be created from object types.
    
        var {...r6} = mapped_generic; // Error, generic mapped object type
                ~~
!!! error TS2700: Rest types may only be created from object types.
        var {...r7} = mapped;  // OK, non-generic mapped type
    
        var {...r8} = union_generic;  // Error, union with generic type parameter
                ~~
!!! error TS2700: Rest types may only be created from object types.
    
        var {...r10} = intersection_generic;  // Error, intersection with generic type parameter
                ~~~
!!! error TS2700: Rest types may only be created from object types.
    
        var {...r14} = u;  // OK
        var {...r15} = n;  // OK
    
        var {...r16} = a;  // OK
    }
    